@@ -4,7 +4,6 @@ import javax.persistence.*;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import ch.uzh.ifi.hase.soprafs24.constant.MembershipStatus;
 
 /**
@@ -34,7 +33,7 @@ public class Group implements Serializable {
     @Column(nullable = false)
     private Long adminId;
 
-    @OneToMany(mappedBy = "group", cascade = CascadeType.ALL, orphanRemoval = true)
+    @OneToMany(mappedBy = "group", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
     private List<GroupMembership> memberships = new ArrayList<>();
 
     public Long getId() {
@@ -84,22 +83,12 @@ public class Group implements Serializable {
     public void setMemberships(List<GroupMembership> memberships) {
         this.memberships = memberships;
     }
-    
-    public void addMembership(GroupMembership membership) {
-        memberships.add(membership);
-        membership.setGroup(this);
-    }
-    
-    public void removeMembership(GroupMembership membership) {
-        memberships.remove(membership);
-        membership.setGroup(null);
-    }
 
     @Transient
     public List<User> getActiveUsers() {
         return memberships.stream()
             .filter(m -> m.getStatus() == MembershipStatus.ACTIVE)
             .map(GroupMembership::getUser)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
